# spoken-diary

./: .pcloud_credentials  RAILWAY.toml  README.md  dockerfile  pyproject.toml  railway.toml  voice_diary_app.py
.github/workflows/: cicd.yml
tests/: conftest.py  test_voice_diary.py
