[project]
name = "spoken-diary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk==3.4.0",
    "gradio>=6.5.1",
    "loguru>=0.7.3",
    "pcloud>=2.0.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 88              # Black's default
target-version = "py311"
extend-exclude = [".venv", "dist", "build", "__pycache__"]

[tool.ruff.lint]
# Ruff defaults to ["E4", "E7", "E9", "F"] which are Flake8's core rules
# Extend with additional common Flake8 plugins
extend-select = [
    "E",      # pycodestyle errors (full set)
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
]

ignore = [
    "E501",   # line too long (Black handles this)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E402",  # Module level import not at top of file
    "F841",  # Local variable assigned but never used
]



